--- a/general/css/index.css
+++ b/general/css/index.css
@@ -126,3 +126,20 @@ border: none;
 padding: 5px;
 box-shadow: 0 0 10px rgb(40, 40, 40)
 }
+
+.button{
+    box-shadow: 0 0 10px rgb(40, 40, 40);
+    background-color: #444;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 15px;
+    color: white;
+    height: 50px;
+    transition: transform 0.3s, box-shadow 0.3s; 
+    width: 150px;
+}
+.button:hover{
+    background-color: #454545;
+    transform: translateY(-5px);     
+    box-shadow: 0px 12px 36px rgba(0, 0, 0, 0.5); /* Slightly increase shadow on lift */
+}
