--- a/general/css/index.css
+++ b/general/css/index.css
@@ -115,6 +115,7 @@ height: 100%;
 z-index: -1;
 }
 #uv-address{
+    font-weight: 900;
   font-family: sans-serif;
 color: white;
 background-color: rgb(33, 33, 33);
@@ -128,6 +129,7 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
 }
 
 .button{
+    font-weight: 900;
     box-shadow: 0 0 10px rgb(40, 40, 40);
     background-color: #444;
     border: none;
