--- a/general/css/index.css
+++ b/general/css/index.css
@@ -37,7 +37,13 @@ font-weight: 600;
 font-size: 2em;
 color: #949494;
 }
-
+#tiger{
+    text-align: center;
+    font-weight: 600;
+    font-size: 1em;
+    color: #ffffff;
+    }
+    
 nav {
     font-family: sans-serif;
     font-size: large;
@@ -159,8 +165,7 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
         transform: translateY(-5px);     
         box-shadow: 0px 12px 36px rgba(0, 0, 0, 0.5); /* Slightly increase shadow on lift */
     }
-
-    .game-container {
+    .row {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -168,7 +173,7 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
         max-width: 1000px;
         margin: 0 auto;
     }
-    .game-card {
+    .column {
         position: relative;
         width: 180px; /* Compact width */
         border-radius: 10px;
@@ -177,7 +182,7 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
         background: #f5f5f5; /* Light grey card background */
         transition: transform 0.2s;
     }
-    .game-card:hover {
+    .column:hover {
         transform: scale(1.05);
     }
     .game-image {
@@ -194,11 +199,11 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
     .game-info h2 {
         font-size: 16px;
         margin: 5px 0;
-        color: #333; /* Darker grey for text */
+        color: #ffffff; /* Darker grey for text */
     }
     .game-info p {
         font-size: 12px;
-        color: #666; /* Medium grey for description */
+        color: #ffffff; /* Medium grey for description */
         margin: 5px 0;
     }
     .play-button {
