--- a/general/css/index.css
+++ b/general/css/index.css
@@ -181,6 +181,7 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         background: #f5f5f5; /* Light grey card background */
         transition: transform 0.2s;
+        background-color: #1d1d1d; /* Dark background */
     }
     .column:hover {
         transform: scale(1.05);
@@ -218,3 +219,60 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
     .play-button:hover {
         background-color: #616161; /* Darker grey on hover */
     }
+    .hidden {
+display: none;
+}
+
+.search-bar {
+display: flex;
+justify-content: center;
+padding: 20px;
+}
+
+.search-bar input {
+background-color: #1d1d1d; /* Dark background */
+width: 50%;
+padding: 10px;
+border: none;
+border-radius: 10px;
+font-size: 16px;
+color: #ffffff;
+}
+
+.search-bar input::placeholder {
+color: #aaaaaa;
+font-family: 'Montserrat', sans-serif;
+}
+
+.search-bar button {
+background-color: #1d1d1d; /* Dark background */
+padding: 10px 20px;
+margin-left: 10px;
+border: none;
+border-radius: 10px;
+color: #ffffff;
+font-size: 16px;
+cursor: pointer;
+transition: background-color 0.3s;
+}
+
+.search-bar button:hover {
+background-color: #606060;
+}
+select{
+background-color: #1d1d1d; /* Dark background */
+border: none;
+color: white;
+border-radius: 10px;
+font-family: 'Montserrat', sans-serif;
+height: 50px;
+width: 150px;
+text-align: center;
+justify-content: center;
+align-items: center;
+}
+option{
+background-color: #1d1d1d; /* Dark background */
+border: none;
+font-family: 'Montserrat', sans-serif;
+}
