--- a/general/css/index.css
+++ b/general/css/index.css
@@ -122,7 +122,7 @@ z-index: -1;
 }
 #uv-address{
     font-weight: 900;
-  font-family: sans-serif;
+      font-family: sans-serif;
 color: white;
 background-color: rgb(33, 33, 33);
 height: 60px;
@@ -131,9 +131,20 @@ border-radius: 20px;
 cursor: pointer;
 border: none;
 padding: 5px;
-box-shadow: 0 0 10px rgb(40, 40, 40)
-}
+box-shadow: 0 0 10px rgb(40, 40, 40);
+outline: none;
+transition: all 0.3s ease;
 
+    }
+    #uv-address::placeholder{
+        text-align: center;
+    }
+#uv-address:focus{
+    border-radius: 30px;
+width: 55%;
+box-shadow: 0 0 10px rgb(177, 177, 177);
+border: none;
+}
 .button{
     font-weight: 900;
     box-shadow: 0 0 10px rgb(40, 40, 40);
@@ -222,57 +233,63 @@ box-shadow: 0 0 10px rgb(40, 40, 40)
     .hidden {
 display: none;
 }
-
 .search-bar {
-display: flex;
-justify-content: center;
-padding: 20px;
+	display: flex;
+	justify-content: center;
+	padding: 20px;
 }
 
 .search-bar input {
-background-color: #1d1d1d; /* Dark background */
-width: 50%;
-padding: 10px;
-border: none;
-border-radius: 10px;
-font-size: 16px;
-color: #ffffff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    outline: none;
+    background-color: #1d1d1d; /* Dark background */
+	width: 50%;
+	padding: 10px;
+	border: none;
+	border-radius: 10px;
+	font-size: 16px;
+	color: #ffffff;
+    transition: all 0.3s ease;
 }
-
+.search-bar input:focus{
+    background-color:rgba(74, 74, 74, 0.2); /* Dark background */
+    box-shadow: 0 2px 10px rgba(74, 74, 74, 0.2);
+}
 .search-bar input::placeholder {
-color: #aaaaaa;
-font-family: 'Montserrat', sans-serif;
+	color: #aaaaaa;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .search-bar button {
-background-color: #1d1d1d; /* Dark background */
-padding: 10px 20px;
-margin-left: 10px;
-border: none;
-border-radius: 10px;
-color: #ffffff;
-font-size: 16px;
-cursor: pointer;
-transition: background-color 0.3s;
+    background-color: #1d1d1d; /* Dark background */
+	padding: 10px 20px;
+	margin-left: 10px;
+	border: none;
+	border-radius: 10px;
+	color: #ffffff;
+	font-size: 16px;
+	cursor: pointer;
+	transition: background-color 0.3s;
 }
 
 .search-bar button:hover {
-background-color: #606060;
+	background-color: #606060;
 }
 select{
-background-color: #1d1d1d; /* Dark background */
-border: none;
-color: white;
-border-radius: 10px;
-font-family: 'Montserrat', sans-serif;
-height: 50px;
-width: 150px;
-text-align: center;
-justify-content: center;
-align-items: center;
+    background-color: #1d1d1d; /* Dark background */
+	border: none;
+	color: white;
+	border-radius: 10px;
+	font-family: 'Montserrat', sans-serif;
+	height: 50px;
+	width: 150px;
+	text-align: center;
+    outline: none;
+	justify-content: center;
+	align-items: center;
 }
 option{
-background-color: #1d1d1d; /* Dark background */
-border: none;
-font-family: 'Montserrat', sans-serif;
+    background-color: #1d1d1d; /* Dark background */
+	border: none;
+	font-family: 'Montserrat', sans-serif;
 }
