--- a/general/css/index.css
+++ b/general/css/index.css
@@ -182,6 +182,7 @@ border: none;
         gap: 20px;
     }
     .column {
+        font-weight: 900;
         position: relative;
         width: 150px; /* Width of the square */
         height: 150px; /* Height of the square */
@@ -201,6 +202,7 @@ border: none;
         transform: translateY(-10px); /* Slightly increased upward movement */
     }
     .description {
+        font-weight: 900;
         position: absolute;
         bottom: -100%;
         left: 0;
@@ -314,7 +316,7 @@ option{
     font-weight: 900;
     background: rgba(44, 44, 44, 0.8); /* Semi-transparent white */
     margin: 10px;
-    height: 400px;
+    height: 450px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -359,6 +361,7 @@ option{
 }
 
 #username-input, #bio-input, #pfp-input {
+    outline: none;
     width: 90%;
     padding: 10px;
     margin: 10px 0;
@@ -368,7 +371,7 @@ option{
 
 #update-button {
     padding: 10px 15px;
-    background-color: #5cb85c;
+    background-color: #777777;
     color: white;
     border: none;
     border-radius: 4px;
@@ -376,7 +379,7 @@ option{
 }
 
 #update-button:hover {
-    background-color: #4cae4c;
+    background-color: #656565;
 }
 
 .file-input {
@@ -388,7 +391,7 @@ option{
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 15px;
-    background-color: #fafafa;
+    background-color: #474747;
 }
 
 #data-management h2 {
@@ -397,7 +400,7 @@ option{
 
 #download-button, #load-button {
     padding: 10px 15px;
-    background-color: #007bff;
+    background-color: #777777;
     color: white;
     border: none;
     border-radius: 4px;
@@ -406,5 +409,5 @@ option{
 }
 
 #download-button:hover, #load-button:hover {
-    background-color: #0056b3;
+    background-color: #606060;
 }
