--- a/general/css/index.css
+++ b/general/css/index.css
@@ -148,14 +148,14 @@ border: none;
 .button{
     font-weight: 900;
     box-shadow: 0 0 10px rgb(40, 40, 40);
-    background-color: #444;
+    background-color: #323232;
     border: none;
     border-radius: 10px;
     padding: 10px 15px;
     color: white;
     height: 60px;
     transition: transform 0.3s, box-shadow 0.3s; 
-    width: 180px;
+    width: 170px;
 }
 .button:hover{
     background-color: #454545;
@@ -178,7 +178,7 @@ border: none;
     }
     .row {
         display: flex;
-        justify-content: center;
+        flex-wrap: wrap;
         gap: 20px;
     }
     .column {
@@ -339,8 +339,8 @@ option{
     padding: 20px; /* Padding inside the chat container */
 }
 #chat-box {
-    box-shadow: 0 2px 10px rgb(56, 56, 56);
-    background-color: #606060;
+    box-shadow: 0 2px 10px rgb(61, 61, 61);
+    background: rgb(61, 61, 61);
     border: 2px solid #444; /* Darker border */
     height: 300px;
     overflow-y: scroll;
@@ -349,6 +349,7 @@ option{
     border-radius: 10px; /* Rounded corners for chat box */
 }
 #user-input {
+    box-shadow: 0 2px 10px rgb(61, 61, 61);
     outline: none;
     width: 60%;
     padding: 10px;
@@ -359,6 +360,7 @@ option{
     margin: 10px 0; /* Margin for spacing */
 }
 #send-button {
+    box-shadow: 0 2px 10px rgb(61, 61, 61);
     width: 18%;
     padding: 10px;
     border: none;
@@ -395,6 +397,7 @@ option{
 }
 
 #gameName, #gameUrl {
+    box-shadow: 0 2px 10px rgb(78, 78, 78);
     outline: none;
     width: 100%;
     padding: 10px;
