--- a/general/css/index.css
+++ b/general/css/index.css
@@ -375,11 +375,13 @@ option{
     border-radius: 4px; /* Rounded corners */
 }
 .text {
+    font-weight: 500;
    text-align: center;
    transition: transform 0.3s;
  }
  
  .text:hover {
+    font-weight: 500;
     transform: translateY(-5%) scale(1.03);
  }
 
