--- a/general/css/index.css
+++ b/general/css/index.css
@@ -15,6 +15,7 @@ body {
 }
 
 .text {
+    padding: 0px;
     font-weight: 900;
     font-size: 3em; /* Large font size for the welcome message */
     opacity: 0; /* Start with invisible text */
