--- a/general/css/index.css
+++ b/general/css/index.css
@@ -46,7 +46,7 @@ color: #949494;
     
 nav {
     font-family: sans-serif;
-    font-size: large;
+    font-size:medium;
     font-weight: 900;
     position: fixed; /* Fix the navbar at the top */
     top: 20px; /* Add some space from the top */
