--- a/general/css/index.css
+++ b/general/css/index.css
@@ -58,7 +58,7 @@ nav {
     transform: translateX(-50%); /* Offset the navbar by 50% of its own width */
     width: 80%; /* Set the width to 80% of the screen */
     padding: 20px; /* Padding for the navbar */
-    background-color: rgba(23, 23, 23, 0.8); /* Semi-transparent background */
+
     color: white; /* Text color */
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
@@ -542,17 +542,12 @@ option{
     min-width: 300px;
     margin: 10px;
     padding: 15px;
+    border-radius: 8px;
     background-color: #3b3b3b;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
-#faviconSelectLabel, #bgColorLabel, #docTitleLabel {
-    color: white;
-    display: block;
-    margin: 10px 0 5px;
-}
-
-.cons input[type="text"], input[type="color"], select {
+.cons input[type="text"], .cons input[type="color"], .cons select {
     outline: none;
     width: 90%;
     padding: 10px;
@@ -584,4 +579,9 @@ option{
 
 #bgColor {
     width: 10%;
+}
+
+#faviconSelect{
+    width: 50%;
+    outline: none;
 }
