--- a/general/css/index.css
+++ b/general/css/index.css
@@ -58,7 +58,7 @@ nav {
     transform: translateX(-50%); /* Offset the navbar by 50% of its own width */
     width: 80%; /* Set the width to 80% of the screen */
     padding: 20px; /* Padding for the navbar */
-    backdrop-filter: blur(10px) saturate(200%) brightness(70%);
+background-color: #2f2f2f;
     color: white; /* Text color */
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
@@ -543,7 +543,7 @@ option{
     margin: 10px;
     padding: 15px;
     border-radius: 8px;
-    background-color: #3b3b3b;
+
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
