--- a/general/css/index.css
+++ b/general/css/index.css
@@ -58,7 +58,7 @@ nav {
     transform: translateX(-50%); /* Offset the navbar by 50% of its own width */
     width: 80%; /* Set the width to 80% of the screen */
     padding: 20px; /* Padding for the navbar */
-background-color: #1f1f1f;
+    background-color: #171717; /* Dark background */
     color: white; /* Text color */
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
