--- a/general/css/index.css
+++ b/general/css/index.css
@@ -539,7 +539,7 @@ option{
     flex: 1;
     margin: 10px;
     padding: 20px;
-    background-color: white;
+    background-color: rgb(40, 40, 40);
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     min-width: 250px; /* Ensures columns have a minimum width */
@@ -574,9 +574,3 @@ option{
     background-color: #c82333; /* Darker red on hover */
 }
 
-button {
-  transition: background-color 0.3s, transform 0.3s;
-  }
-  button:hover {
-  transform: scale(1.1);
-  }
