--- a/general/css/index.css
+++ b/general/css/index.css
@@ -268,6 +268,7 @@ display: none;
 }
 
 .search-bar button {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     font-family: 'Montserrat', sans-serif;
     background-color: #1d1d1d; /* Dark background */
 	padding: 10px 20px;
@@ -281,6 +282,7 @@ display: none;
 }
 
 .search-bar button:hover {
+    box-shadow: 0 2px 10px rgba(106, 106, 106, 0.2);
 	background-color: #606060;
 }
 select{
