--- a/general/css/index.css
+++ b/general/css/index.css
@@ -551,6 +551,7 @@ option{
     margin: 10px 0 5px;
 }
 #docTitleInput, #faviconInput, #bgColorInput, #faviconSelectInput, #blankCloakerInput {
+    outline: none;
     width: 90%;
     padding: 8px;
     margin-bottom: 10px;
