--- a/general/css/index.css
+++ b/general/css/index.css
@@ -534,6 +534,7 @@ option{
     text-align: center;
 }
 #settingsContainer {
+    margin: 20px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -561,7 +562,7 @@ option{
 }
 #bgColorInput{
     outline: none;
-    width: 20%;
+    width: 90%;
     padding: 8px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -588,7 +589,7 @@ option{
 
 #faviconSelectInput{
     outline: none;
-    width: 40%;
+    width: 90%;
     padding: 8px;
     height:30px;
     margin-bottom: 10px;
