--- a/general/css/index.css
+++ b/general/css/index.css
@@ -51,7 +51,7 @@ color: #949494;
     
 nav {
     font-family: sans-serif;
-    font-size:medium;
+    font-size:small;
     font-weight: 700;
     position: fixed; /* Fix the navbar at the top */
     top: 20px; /* Add some space from the top */
