--- a/general/css/index.css
+++ b/general/css/index.css
@@ -590,6 +590,9 @@ option{
 
 #faviconSelectInput{
     outline: none;
+    background: #393939;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
     width: 90%;
     padding: 8px;
     height:30px;
@@ -627,3 +630,31 @@ option{
     height:30px;
     width:60px;
   }
+
+  .image-container {
+    font-weight:700;
+color: lightgrey;
+font-family:sans-serif;
+width: 50.5vw; /* Adjust width as needed */
+background-color: #202020;
+border-radius: 0.5vw;
+box-shadow: 0 0.313vw 0.625vw 0 rgba(30, 30, 30, 0.5);
+outline: 0.1vw solid #333;
+padding: 1.042vw; /* Padding inside the container */
+margin-left: 20%;
+margin-right:20%;
+margin-top: 5.208vw;
+}
+
+.image-container img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.2s;
+}
+
+.image-container img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
