--- a/general/css/index.css
+++ b/general/css/index.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 body {
     user-select: none;
     margin: 0;
     background-color: #171717; /* Dark background */
     height: 100vh;
-    font-family: sans-serif;
+    font-family: 'Inter' sans-serif;
     color: #ffffff; /* White text color */
     opacity: 0; /* Start with invisible text */
-    animation: fadeIn 2s forwards; /* Fade-in animation for the page */
+    animation: fadeIn 2.5s forwards; /* Fade-in animation for the page */
 }
 
 @keyframes fadeIn {
@@ -160,7 +161,7 @@ border: none;
 .button{
     font-weight: 700;
     box-shadow: 0 0 10px rgb(40, 40, 40);
-    background-color: #323232;
+    background-color: #202020;
     border: none;
     border-radius: 10px;
     padding: 10px 15px;
